<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadStoryActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_place_holder" />

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/galleryButton"
                app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"
                android:scaleType="fitCenter"
                android:text="@string/gallery"
                app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
                app:layout_constraintEnd_toStartOf="@+id/cameraButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cameraButton" />

            <CheckBox
                android:id="@+id/checkBoxAddLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location"
                app:layout_constraintTop_toBottomOf="@+id/cameraButton"
                tools:layout_editor_absoluteX="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxAddLocation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:lines="5"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
